# boost-shap-gii

./: .gitignore  AID_LOG.md  INPUT_SPECIFICATION.md  LICENSE  README.md  check_env.py  environment.yaml  example_config_advanced.yaml  example_config_minimal.yaml  infer.py  plot.R  predict.py  pyproject.toml  run_boost_shap_gii.sh  shap_utils.py  train.py  utils.py
.aid/: project_claude.md
.aid/reports/: boost-shap-gii_MEMORY_20260316_100000.md  boost-shap-gii_brainstorm_20260309_010000.md  boost-shap-gii_brainstorm_20260316_000000.md  boost-shap-gii_brainstorm_20260316_040000.md  boost-shap-gii_clean_20260316_080000.md  boost-shap-gii_cr_20260309_000000.md  boost-shap-gii_document_20260316_060000.md  boost-shap-gii_implement_build_20260316_020000.md  boost-shap-gii_implement_build_20260316_040000.md  boost-shap-gii_implement_build_20260316_090100.md  boost-shap-gii_implement_build_20260326_104459.md  boost-shap-gii_implement_build_20260326_154719.md  boost-shap-gii_implement_build_20260326_160311.md  boost-shap-gii_implement_plan_20260316_020000.md  boost-shap-gii_implement_plan_20260316_040000.md  boost-shap-gii_implement_plan_20260316_090000.md  boost-shap-gii_implement_plan_20260326_104459.md  boost-shap-gii_implement_plan_20260326_154719.md  boost-shap-gii_implement_plan_20260326_155902.md  boost-shap-gii_implement_plan_20260326_164434.md  boost-shap-gii_test_20260316_030000.md  boost-shap-gii_test_20260316_040000.md  boost-shap-gii_test_20260326_110733.md  boost-shap-gii_test_20260326_155522.md
src/boost_shap_gii/: __init__.py  check_env.py  cli.py  infer.py  (+4 more)
(+2 files in other folders)
